--- a/package.json
+++ b/package.json
@@ -4,19 +4,27 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
+    "metro": "react-native start -- --reset-cache",
     "test": "jest",
     "lint": "eslint ."
   },
   "dependencies": {
+    "kea": "^0.28.7",
+    "kea-saga": "^0.3.5",
     "native-base": "^2.12.1",
     "prop-types": "^15.7.2",
+    "re-reselect": "^3.0.0",
     "react": "16.8.3",
     "react-native": "0.59.1",
     "react-native-gesture-handler": "^1.1.0",
     "react-native-paper": "^2.14.0",
     "react-native-vector-icons": "^6.4.2",
     "react-navigation": "^3.5.1",
-    "react-navigation-material-bottom-tabs": "^1.0.0"
+    "react-navigation-material-bottom-tabs": "^1.0.0",
+    "react-redux": "^6.0.1",
+    "redux": "^4.0.1",
+    "redux-saga": "^1.0.2",
+    "reselect": "^4.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.0",
