--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "re-reselect": "^3.0.0",
     "react": "16.8.3",
     "react-native": "0.59.1",
+    "react-native-fast-image": "^5.2.0",
     "react-native-gesture-handler": "^1.1.0",
     "react-native-paper": "^2.14.0",
     "react-native-vector-icons": "^6.4.2",
