--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native": "0.59.1",
     "react-native-fast-image": "^5.2.0",
     "react-native-gesture-handler": "^1.1.0",
+    "react-native-maps": "^0.23.0",
     "react-native-paper": "^2.14.0",
     "react-native-vector-icons": "^6.4.2",
     "react-navigation": "^3.5.1",
