--- a/ios/Podfile
+++ b/ios/Podfile
@@ -40,6 +40,7 @@ target 'manlyhappyhour' do
   end
   
   post_install do |installer|
+    targets_to_ignore = %w(React yoga)
     installer.pods_project.targets.each do |target|
       if target.name == 'react-native-google-maps'
         target.build_configurations.each do |config|
@@ -49,5 +50,10 @@ target 'manlyhappyhour' do
       if target.name == "React"
         target.remove_from_project
       end
+
+      if targets_to_ignore.include? target.name
+        target.remove_from_project
+      end
+
     end
   end
