--- a/ios/Podfile
+++ b/ios/Podfile
@@ -37,6 +37,7 @@ target 'manlyhappyhour' do
     pod 'react-native-google-maps', path: rn_maps_path  # Uncomment this line if you want to support GoogleMaps on iOS
     pod 'GoogleMaps'  # Uncomment this line if you want to support GoogleMaps on iOS
     pod 'Google-Maps-iOS-Utils' # Uncomment this line if you want to support GoogleMaps on iOS
+    pod 'Firebase/Firestore', '~> 5.15.0'
   end
   
   post_install do |installer|
