--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-redux": "^6.0.1",
     "redux": "^4.0.1",
     "redux-saga": "^1.0.2",
+    "redux-saga-firebase": "^0.15.0",
     "reselect": "^4.0.0"
   },
   "devDependencies": {
