--- a/ios/Podfile
+++ b/ios/Podfile
@@ -39,6 +39,8 @@ target 'manlyhappyhour' do
     pod 'Google-Maps-iOS-Utils' # Uncomment this line if you want to support GoogleMaps on iOS
     pod 'Firebase/Core', '~> 5.15.0'
     pod 'Firebase/Database', '~> 5.15.0'
+    pod 'react-native-async-storage', :path => '../node_modules/@react-native-community/async-storage'
+
   end
   
   post_install do |installer|
