--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.2.3",
     "kea": "^0.28.7",
     "kea-saga": "^0.3.5",
     "native-base": "^2.12.1",
