--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.2.3",
+    "deep-equal": "^1.0.1",
     "kea": "^0.28.7",
     "kea-saga": "^0.3.5",
     "native-base": "^2.12.1",
