--- a/ios/Podfile
+++ b/ios/Podfile
@@ -40,6 +40,8 @@ target 'manlyhappyhour' do
     pod 'Firebase/Core', '~> 5.15.0'
     pod 'Firebase/Database', '~> 5.15.0'
 
+    pod 'react-native-async-storage', :path => '../node_modules/@react-native-community/async-storage'
+
   end
   
   post_install do |installer|
