--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "re-reselect": "^3.0.0",
     "react": "16.8.3",
     "react-native": "0.59.1",
+    "react-native-communications": "^2.2.1",
     "react-native-fast-image": "^5.2.0",
     "react-native-firebase": "^5.2.3",
     "react-native-gesture-handler": "^1.1.0",
     "react-native-maps": "https://github.com/react-native-community/react-native-maps.git#c102c36d895cbef8b6a8deefd4c58fb0dc17638e",
     "react-native-paper": "^2.14.0",
+    "react-native-parsed-text": "^0.0.21",
     "react-native-vector-icons": "^6.4.2",
     "react-navigation": "^3.5.1",
     "react-navigation-material-bottom-tabs": "^1.0.0",
