--- a/ios/manlyhappyhour/Info.plist
+++ b/ios/manlyhappyhour/Info.plist
@@ -38,7 +38,7 @@
 		</dict>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string>To help guide you to your next Manly deal</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>AntDesign.ttf</string>
