Added NSLocationAlwaysUsageDescription key

--- a/ios/manlyhappyhour/Info.plist
+++ b/ios/manlyhappyhour/Info.plist
@@ -39,6 +39,8 @@
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>To help guide you to your next Manly deal</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>To help guide you to your next Manly deal</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>AntDesign.ttf</string>
