--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "16.8.3",
     "react-native": "0.59.1",
     "react-native-communications": "^2.2.1",
+    "react-native-emoji": "^1.6.0",
     "react-native-fast-image": "^5.2.0",
     "react-native-firebase": "^5.2.3",
     "react-native-gesture-handler": "^1.1.0",
