--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "kea": "^0.28.7",
     "kea-saga": "^0.3.5",
     "native-base": "^2.12.1",
+    "node-emoji": "^1.10.0",
     "prop-types": "^15.7.2",
     "re-reselect": "^3.0.0",
     "react": "16.8.3",
