--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-maps": "https://github.com/react-native-community/react-native-maps.git#c102c36d895cbef8b6a8deefd4c58fb0dc17638e",
     "react-native-paper": "^2.14.0",
     "react-native-parsed-text": "^0.0.21",
+    "react-native-picker-select": "^6.1.0",
     "react-native-vector-icons": "^6.4.2",
     "react-navigation": "^3.5.1",
     "react-navigation-material-bottom-tabs": "^1.0.0",
