--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "react-native-fast-image": "^5.2.0",
     "react-native-firebase": "^5.2.3",
     "react-native-gesture-handler": "^1.1.0",
-    "react-native-maps": "https://github.com/react-native-community/react-native-maps.git#c102c36d895cbef8b6a8deefd4c58fb0dc17638e",
+    "react-native-maps": "^0.24.2",
     "react-native-paper": "^2.14.0",
     "react-native-parsed-text": "^0.0.21",
     "react-native-picker-select": "^6.1.0",
