--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "metro": "react-native start -- --reset-cache",
+    "fullupdate": "yarn && cd ios && pod install && cd ..",
     "test": "jest",
     "lint": "eslint ."
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.2.3",
+    "d3-collection": "^1.0.7",
     "date-fns": "^1.30.1",
     "deep-equal": "^1.0.1",
     "kea": "^0.28.7",
