--- a/ios/manlyhappyhour/Info.plist
+++ b/ios/manlyhappyhour/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>manlyhappyhour</string>
+	<string>Manly Happy Hour</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
