--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -153,6 +153,8 @@ dependencies {
     implementation project(':react-native-device-info')
     implementation project(':@react-native-community_async-storage')
     implementation project(':react-native-firebase')
+    implementation 'com.facebook.fresco:fresco:1.10.0'
+    implementation 'com.facebook.fresco:animated-gif:1.10.0'
     implementation project(':react-native-fast-image')
     implementation project(':react-native-vector-icons')
     implementation project(':react-native-gesture-handler')
