--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-paper": "^2.14.0",
     "react-native-parsed-text": "^0.0.21",
     "react-native-picker-select": "^6.1.0",
+    "react-native-splash-screen": "^3.2.0",
     "react-native-vector-icons": "^6.4.2",
     "react-navigation": "^3.5.1",
     "react-navigation-material-bottom-tabs": "^1.0.0",
